force-app/main/default/objects/os_AML__c/os_AML__c.object-meta.xml
<CustomObject>
    <label>AML</label>
    <nameField>
        <displayFormat>AML-{000000}</displayFormat>
        <label>AML Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMLS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>