force-app/main/default/objects/os_AML__c/fields/os_AML_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>os_AML_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AML 18 Digit Id</label>
    <type>Text</type>
</CustomField>