force-app/main/default/objects/os_AML__c/fields/os_AML_Age_In_Days__c.field-meta.xml
<CustomField>
    <fullName>os_AML_Age_In_Days__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AML Age (In Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>