force-app/main/default/objects/os_AML__c/fields/os_AML_Relationship_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>os_AML_Relationship_Contact_Name__c</fullName>
    <label>AML Relationship Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>