force-app/main/default/objects/os_AML__c/fields/os_AML_Severity__c.field-meta.xml
<CustomField>
    <fullName>os_AML_Severity__c</fullName>
    <label>AML Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
            </value>
            <value>
                <fullName>Low Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>