force-app/main/default/objects/os_AML__c/fields/os_Closing__c.field-meta.xml
<CustomField>
    <fullName>os_Closing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing</label>
    <referenceTo>os_Closing__c</referenceTo>
    <relationshipLabel>AMLS</relationshipLabel>
    <relationshipName>AMLS</relationshipName>
    <type>Lookup</type>
</CustomField>