force-app/main/default/objects/os_AML__c/fields/os_Company__c.field-meta.xml
<CustomField>
    <fullName>os_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AMLS</relationshipLabel>
    <relationshipName>Company</relationshipName>
    <type>Lookup</type>
</CustomField>