force-app/main/default/objects/os_AML__c/fields/os_Conditional_Approved_Reason__c.field-meta.xml
<CustomField>
    <fullName>os_Conditional_Approved_Reason__c</fullName>
    <label>Conditional Approved Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>