force-app/main/default/objects/os_AML__c/fields/os_Convenyance_Status__c.field-meta.xml
<CustomField>
    <fullName>os_Convenyance_Status__c</fullName>
    <label>Convenyance Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>