force-app/main/default/objects/os_AML__c/fields/os_Convenyance_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Convenyance_Transfer_Date__c</fullName>
    <label>Convenyance Transfer Date</label>
    <type>Date</type>
</CustomField>