force-app/main/default/objects/os_AML__c/fields/os_Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Employment_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employment Type</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipLabel>AMLS (Employment Type)</relationshipLabel>
    <relationshipName>EmploymentType</relationshipName>
    <type>Lookup</type>
</CustomField>