force-app/main/default/objects/os_AML__c/fields/os_Financial_Information_Documents__c.field-meta.xml
<CustomField>
    <fullName>os_Financial_Information_Documents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Information Documents</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipLabel>AMLS (Financial Information Documents)</relationshipLabel>
    <relationshipName>FinancialInformationDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>