force-app/main/default/objects/os_AML__c/fields/os_Industry__c.field-meta.xml
<CustomField>
    <fullName>os_Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employment/Business Industry</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipLabel>AMLS (Employment/Business Industry)</relationshipLabel>
    <relationshipName>AMLS3</relationshipName>
    <type>Lookup</type>
</CustomField>