force-app/main/default/objects/os_AML__c/fields/os_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>os_Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Inquiry</label>
    <referenceTo>os_Request__c</referenceTo>
    <relationshipLabel>AMLS</relationshipLabel>
    <relationshipName>AMLS</relationshipName>
    <type>Lookup</type>
</CustomField>