force-app/main/default/objects/os_AML__c/fields/os_Is_Status_have_KYC__c.field-meta.xml
<CustomField>
    <fullName>os_Is_Status_have_KYC__c</fullName>
    <formula>OR(
ISPICKVAL(  os_Status__c , &apos;KYC Pending&apos;) ,
ISPICKVAL( os_Status__c , &apos;KYC Submitted&apos;) ,
ISPICKVAL( os_Status__c , &apos;KYC Approved&apos;) ,
ISPICKVAL( os_Status__c , &apos;KYC Rejected&apos;) ,
ISPICKVAL( os_Status__c , &apos;KYC Completed&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Status have KYC ?</label>
    <type>Checkbox</type>
</CustomField>