force-app/main/default/objects/os_AML__c/fields/os_Listing__c.field-meta.xml
<CustomField>
    <fullName>os_Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>os_Listing__c</referenceTo>
    <relationshipLabel>AMLS</relationshipLabel>
    <relationshipName>Listing</relationshipName>
    <type>Lookup</type>
</CustomField>