force-app/main/default/objects/os_AML__c/fields/os_Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>os_Mode_of_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mode of Payment</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipLabel>AMLS (Mode of Payment)</relationshipLabel>
    <relationshipName>ModeofPayment</relationshipName>
    <type>Lookup</type>
</CustomField>