force-app/main/default/objects/os_AML__c/fields/os_Other_businesses_of_the_client__c.field-meta.xml
<CustomField>
    <fullName>os_Other_businesses_of_the_client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other businesses of the client</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipLabel>AMLS (Other businesses of the client)</relationshipLabel>
    <relationshipName>Otherbusinessesoftheclient</relationshipName>
    <type>Lookup</type>
</CustomField>