force-app/main/default/objects/os_AML__c/fields/os_Project__c.field-meta.xml
<CustomField>
    <fullName>os_Project__c</fullName>
    <formula>os_Inquiry__r.os_Project__r.os_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>