force-app/main/default/objects/os_AML__c/fields/os_Property_Valuation__c.field-meta.xml
<CustomField>
    <fullName>os_Property_Valuation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Valuation</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipLabel>AMLS (Property Valuation)</relationshipLabel>
    <relationshipName>AMLS6</relationshipName>
    <type>Lookup</type>
</CustomField>