force-app/main/default/objects/os_AML__c/fields/os_Related_Inquiry_Link__c.field-meta.xml
<CustomField>
    <fullName>os_Related_Inquiry_Link__c</fullName>
    <formula>IF(
NOT(ISBLANK( os_Inquiry__c )),
&quot;https://gulfsothebysinternational.lightning.force.com/lightning/r/pba__Request__c/&quot; &amp; os_Inquiry__c &amp; &quot;/view&quot;,
&quot;https://gulfsothebysinternational.lightning.force.com/lightning/r/AML__c/&quot; &amp; Id &amp; &quot;/view&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Inquiry Link</label>
    <type>Text</type>
</CustomField>