force-app/main/default/objects/os_AML__c/fields/os_Resident__c.field-meta.xml
<CustomField>
    <fullName>os_Resident__c</fullName>
    <label>Resident</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Na</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>