force-app/main/default/objects/os_AML__c/fields/os_Screening_Shareholder__c.field-meta.xml
<CustomField>
    <fullName>os_Screening_Shareholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Screening Shareholder</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipLabel>AMLS (Screening Shareholder)</relationshipLabel>
    <relationshipName>AMLS4</relationshipName>
    <type>Lookup</type>
</CustomField>