force-app/main/default/objects/os_AML__c/fields/os_Status__c.field-meta.xml
<CustomField>
    <fullName>os_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>AML Rejected</fullName>
            </value>
            <value>
                <fullName>KYC Pending</fullName>
            </value>
            <value>
                <fullName>KYC Submitted</fullName>
            </value>
            <value>
                <fullName>KYC Approved</fullName>
            </value>
            <value>
                <fullName>KYC Rejected</fullName>
            </value>
            <value>
                <fullName>KYC Completed</fullName>
            </value>
            <value>
                <fullName>Compliance Review</fullName>
            </value>
            <value>
                <fullName>Document Pending</fullName>
            </value>
            <value>
                <fullName>3rd Party Review</fullName>
            </value>
            <value>
                <fullName>TOB Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>