force-app/main/default/objects/os_AML__c/fields/os_Total_Weighted_Score_New__c.field-meta.xml
<CustomField>
    <fullName>os_Total_Weighted_Score_New__c</fullName>
    <label>Total Weighted Score</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>