force-app/main/default/objects/os_AML__c/fields/os_Year_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>os_Year_of_Establishment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year of Establishment</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipLabel>AMLS (Year of Establishment)</relationshipLabel>
    <relationshipName>YearofEstablishment</relationshipName>
    <type>Lookup</type>
</CustomField>