force-app/main/default/objects/os_AML__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Sharing Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>UAE</fullName>
            </value>
            <value>
                <fullName>Saudi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>