force-app/main/default/objects/os_AML__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Buyer POA</fullName>
            </value>
            <value>
                <fullName>Seller POA</fullName>
            </value>
            <value>
                <fullName>3rd Party Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>