force-app/main/default/objects/os_AML__c/fields/Sharing_Rule__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Rule__c</fullName>
    <label>Sharing Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gulf Sothebys</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Project Developments</fullName>
            </value>
            <value>
                <fullName>UK Sotheby&apos;s International Realty</fullName>
            </value>
            <value>
                <fullName>Saudi Arabia Sotheby&apos;s International Realty</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>