force-app/main/default/objects/os_AML__c/fields/Sharing_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Sub_Region__c</fullName>
    <label>Sharing Sub Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Ras Al Khaimah</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>Umm Al Quwain</fullName>
            </value>
            <value>
                <fullName>Fujairah</fullName>
            </value>
            <value>
                <fullName>Riyadh</fullName>
            </value>
            <value>
                <fullName>Jeddah</fullName>
            </value>
            <value>
                <fullName>Makkah</fullName>
            </value>
            <value>
                <fullName>Al-Madinah</fullName>
            </value>
            <value>
                <fullName>Buraidah</fullName>
            </value>
            <value>
                <fullName>Dammam</fullName>
            </value>
            <value>
                <fullName>Abha</fullName>
            </value>
            <value>
                <fullName>Tabouk</fullName>
            </value>
            <value>
                <fullName>Hayel</fullName>
            </value>
            <value>
                <fullName>Ar&apos;ar</fullName>
            </value>
            <value>
                <fullName>Jazan</fullName>
            </value>
            <value>
                <fullName>Najran</fullName>
            </value>
            <value>
                <fullName>Al-Baha</fullName>
            </value>
            <value>
                <fullName>Sakaka</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>