force-app/main/default/objects/os_AML__c/fields/Total_Score_Without_Weightage_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Score_Without_Weightage_New__c</fullName>
    <label>Total Score Without Weightage</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>