force-app/main/default/objects/os_AML__c/fields/Total_Value_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_New__c</fullName>
    <label>Total Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>