force-app/main/default/objects/os_AML__c/recordTypes/UK.recordType-meta.xml
<RecordType>
    <fullName>UK</fullName>
    <active>true</active>
    <label>UK</label>
</RecordType>